# exeqt

./: .gitmodules  .travis.yml  README.md  app.js  appveyor.yml  console.cpp  console.h  exeqt.pro  main.cpp  mainwindow.cpp  mainwindow.h  mwindow.cpp  mwindow.h  rect.cpp  rect.h  scene.cpp  scene.h  screen.cpp  screen.h  slib.h  socketmanager.cpp  socketmanager.h  tetrixboard.h  tetrixpiece.h  tetrixwindow.h  view.cpp  view.h  xlabel.h  xwidget.h
lenna/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  slib.h
lenna/resources/: resource_file.qrc
resources/: resource.qrc
winry/: app.js  package.json
